--- a/data/notebooks/geotiff.ipynb
+++ b/data/notebooks/geotiff.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,7 @@
     "import zipfile\n",
     "import tempfile\n",
     "import random\n",
+    "import requests\n",
     "\n",
     "from rasterio.windows import Window\n",
     "from rasterio import Affine\n",
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +40,7 @@
        "'3.7.8 | packaged by conda-forge | (default, Jul 31 2020, 02:25:08) \\n[GCC 7.5.0]'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -68,28 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/jovyan/work/test_tile/L1C_T36UYA_A017393_20200705T083602_TCI.jp2'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "TEST_TILE_PATH = os.getenv('TEST_TILE_PATH')\n",
-    "TEST_TILE_PATH"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,33 +220,72 @@
     "\n",
     "    output_path = f\"/home/{NB_USER}/work/results/{stem}_{location_name}.tif\"\n",
     "    crop(tif_path, output_path, aoi)\n",
-    "    print(f\"Gnerated file: {output_path}\")"
+    "    print(f\"Generated file: {output_path}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_ = f\"/home/{NB_USER}/work/notebooks\""
+    "def load_tile(dir_, url):\n",
+    "    tile_filename = url.split(\"/\")[-1]\n",
+    "    path = f\"{dir_}/{tile_filename}\"\n",
+    "    if os.path.exists(path):\n",
+    "        print(f\"Tile {path} already exists! Using it...\")\n",
+    "        return path\n",
+    "    \n",
+    "    print(f\"Loading tile: {url}\")\n",
+    "    \n",
+    "    with requests.Session() as session:\n",
+    "        response = session.get(url)\n",
+    "        if response.status_code == 200:\n",
+    "            with open(path, 'wb') as file:\n",
+    "                file.write(response.content)\n",
+    "        else:\n",
+    "            raise ValueError(f\"Cannot load tile {url}. Check and rerun!\")\n",
+    "    print(f\"Tile loaded and stored: {tile_path}\")\n",
+    "    return path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir_ = f\"/home/{NB_USER}/work/sentinel\"\n",
+    "\n",
+    "TILE_URL = \"https://storage.googleapis.com/gcp-public-data-sentinel-2/tiles/36/U/YA/\" \\\n",
+    "           \"S2B_MSIL1C_20200705T083559_N0209_R064_T36UYA_20200705T114142.SAFE/GRANULE/\" \\\n",
+    "           \"L1C_T36UYA_A017393_20200705T083602/IMG_DATA/T36UYA_20200705T083559_TCI.jp2\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### main execution cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Сreated temporary directory for calculations: /home/jovyan/work/notebooks/tmpmwa7tii9\n",
-      "Gnerated file: /home/jovyan/work/results/L1C_T36UYA_A017393_20200705T083602_TCI_kharkiv.tif\n"
+      "Tile /home/jovyan/work/sentinel/T36UYA_20200705T083559_TCI.jp2 already exists! Using it...\n",
+      "Сreated temporary directory for calculations: /home/jovyan/work/sentinel/tmpq__gera2\n",
+      "Generated file: /home/jovyan/work/results/T36UYA_20200705T083559_TCI_kharkiv.tif\n"
      ]
     }
    ],
    "source": [
+    "tile_path = load_tile(dir_, TILE_URL)\n",
     "with tempfile.TemporaryDirectory(dir=dir_) as tmpdirname:\n",
     "    print('Сreated temporary directory for calculations:', tmpdirname)\n",
     "        \n",
@@ -274,7 +293,7 @@
     "    name = random.choice(list(locations.keys()))\n",
     "    aoi = locations[name]\n",
     "    \n",
-    "    generate(tmpdirname, TEST_TILE_PATH, aoi, name)"
+    "    generate(tmpdirname, tile_path, aoi, name)"
    ]
   },
   {
