13448: rm TEST_TILE_PATH in header markdown

--- a/data/notebooks/geotiff.ipynb
+++ b/data/notebooks/geotiff.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Test notebook that generates .tif files and stores in /results folder. Check env TEST_TILE_PATH to .jp2 tile. Use **python37** kernel."
+    "#### Test notebook that generates .tif files and stores in /results folder. Use **python37** kernel."
    ]
   },
   {
