13448: replace undifined var, add atomic rename

--- a/data/notebooks/geojson.ipynb
+++ b/data/notebooks/geojson.ipynb
@@ -385,19 +385,46 @@
     "    geometry = random.choice([kharkiv_zoo, kharkiv_park, homilsha, hytor, osnova_lake]) \n",
     "    item = Feature(id=id_, geometry=geometry, properties=properties)\n",
     "    \n",
-    "    return item, f\"/home/{NB_USER}/work/results/{id_}_{layer}_{acquired.split('T')[0]}.geojson\""
+    "    return item, f\"/home/{NB_USER}/work/results/{id_}_{layer}_{acquired.split('T')[0]}.geojson.temp\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### main execution cell"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating .geojson file...\n",
+      "Generated temp file: /home/jovyan/work/results/5e99b847-1f28-4f22-88bf-aa92e80a3ead_Red_2020-01-20.geojson.temp\n",
+      "Rename temp file: /home/jovyan/work/results/5e99b847-1f28-4f22-88bf-aa92e80a3ead_Red_2020-01-20.geojson.temp to /home/jovyan/work/results/5e99b847-1f28-4f22-88bf-aa92e80a3ead_Red_2020-01-20.geojson\n",
+      "Execution finished\n"
+     ]
+    }
+   ],
    "source": [
-    "item, path = generate_item()\n",
+    "print(\"Generating .geojson file...\")\n",
     "\n",
-    "with open(path, 'w') as file:\n",
-    "    geojson.dump(item, file)"
+    "item, temp_path = generate_item()\n",
+    "\n",
+    "with open(temp_path, 'w') as file:\n",
+    "    geojson.dump(item, file)\n",
+    "    \n",
+    "print(f\"Generated temp file: {temp_path}\")\n",
+    "output_path = temp_path[:-5]\n",
+    "print(f\"Rename temp file: {temp_path} to {output_path}\")\n",
+    "os.rename(temp_path, output_path)\n",
+    "    \n",
+    "print(\"Execution finished\")"
    ]
   },
   {
