--- a/data/notebooks/geotiff.ipynb
+++ b/data/notebooks/geotiff.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "'3.7.8 | packaged by conda-forge | (default, Jul 31 2020, 02:25:08) \\n[GCC 7.5.0]'"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,25 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate(dir_, tile_path, aoi, location_name):\n",
-    "    \n",
-    "    stem = Path(tile_path).stem\n",
-    "    tif_path = f\"{dir_}/{stem}.tif\"    \n",
-    "    target_crs = convert(tile_path, tif_path)\n",
-    "    aoi = to_crs(Polygon(aoi), target_crs)\n",
-    "\n",
-    "    output_path = f\"/home/{NB_USER}/work/results/{stem}_{location_name}.tif\"\n",
-    "    crop(tif_path, output_path, aoi)\n",
-    "    print(f\"Generated file: {output_path}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,13 +227,35 @@
     "                file.write(response.content)\n",
     "        else:\n",
     "            raise ValueError(f\"Cannot load tile {url}. Check and rerun!\")\n",
-    "    print(f\"Tile loaded and stored: {tile_path}\")\n",
+    "    print(f\"Tile loaded and stored: {path}\")\n",
     "    return path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate(dir_, tile_path, aoi, location_name):\n",
+    "    \n",
+    "    stem = Path(tile_path).stem\n",
+    "    tif_path = f\"{dir_}/{stem}.tif\"    \n",
+    "    target_crs = convert(tile_path, tif_path)\n",
+    "    aoi = to_crs(Polygon(aoi), target_crs)\n",
+    "\n",
+    "    temp_output_path = f\"/home/{NB_USER}/work/results/{stem}_{location_name}.tif.temp\"\n",
+    "    crop(tif_path, temp_output_path, aoi)\n",
+    "    \n",
+    "    print(f\"Generated temp file: {temp_output_path}\")\n",
+    "    output_path = temp_output_path[:-5]\n",
+    "    print(f\"Rename temp file: {temp_output_path} to {output_path}\")\n",
+    "    os.rename(temp_output_path, output_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -279,8 +283,10 @@
      "output_type": "stream",
      "text": [
       "Tile /home/jovyan/work/sentinel/T36UYA_20200705T083559_TCI.jp2 already exists! Using it...\n",
-      "Сreated temporary directory for calculations: /home/jovyan/work/sentinel/tmpq__gera2\n",
-      "Generated file: /home/jovyan/work/results/T36UYA_20200705T083559_TCI_kharkiv.tif\n"
+      "Сreated temporary directory for calculations: /home/jovyan/work/sentinel/tmpulmfxq43\n",
+      "Generated temp file: /home/jovyan/work/results/T36UYA_20200705T083559_TCI_tetleha.tif.temp\n",
+      "Rename temp file: /home/jovyan/work/results/T36UYA_20200705T083559_TCI_tetleha.tif.temp to /home/jovyan/work/results/T36UYA_20200705T083559_TCI_tetleha.tif\n",
+      "Execution finished\n"
      ]
     }
    ],
@@ -293,7 +299,9 @@
     "    name = random.choice(list(locations.keys()))\n",
     "    aoi = locations[name]\n",
     "    \n",
-    "    generate(tmpdirname, tile_path, aoi, name)"
+    "    generate(tmpdirname, tile_path, aoi, name)\n",
+    "\n",
+    "print(\"Execution finished\")"
    ]
   },
   {
