13504: execution, no code changes

--- a/data/notebooks/geotiff.ipynb
+++ b/data/notebooks/geotiff.ipynb
@@ -282,11 +282,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading tile: https://storage.googleapis.com/gcp-public-data-sentinel-2/tiles/36/U/YA/S2B_MSIL1C_20200705T083559_N0209_R064_T36UYA_20200705T114142.SAFE/GRANULE/L1C_T36UYA_A017393_20200705T083602/IMG_DATA/T36UYA_20200705T083559_TCI.jp2\n",
-      "Tile loaded and stored: /home/jovyan/work/sentinel/T36UYA_20200705T083559_TCI.jp2\n",
-      "Сreated temporary directory for calculations: /home/jovyan/work/sentinel/tmpcfqxrgdg\n",
-      "Generated temp file: /home/jovyan/work/results/T36UYA_20200705T083559_TCI_kharkiv.tif.temp\n",
-      "Rename temp file: /home/jovyan/work/results/T36UYA_20200705T083559_TCI_kharkiv.tif.temp to /home/jovyan/work/results/T36UYA_20200705T083559_TCI_kharkiv.tif\n",
+      "Tile /home/jovyan/work/sentinel/T36UYA_20200705T083559_TCI.jp2 already exists! Using it...\n",
+      "Сreated temporary directory for calculations: /home/jovyan/work/sentinel/tmpotxcp0w3\n",
+      "Generated temp file: /home/jovyan/work/results/T36UYA_20200705T083559_TCI_forest.tif.temp\n",
+      "Rename temp file: /home/jovyan/work/results/T36UYA_20200705T083559_TCI_forest.tif.temp to /home/jovyan/work/results/T36UYA_20200705T083559_TCI_forest.tif\n",
       "Execution finished\n"
      ]
     }
