13529: add Feature collection generation, add lines, points

--- a/data/notebooks/geojson.ipynb
+++ b/data/notebooks/geojson.ipynb
@@ -20,7 +20,7 @@
     "import time\n",
     "import uuid\n",
     "\n",
-    "from geojson import Feature, Polygon\n",
+    "from geojson import Feature, Polygon, FeatureCollection, Point, LineString\n",
     "from datetime import datetime"
    ]
   },
@@ -367,7 +367,24 @@
     "              49.9383227101154\n",
     "            ]\n",
     "          ]\n",
-    "        ])"
+    "        ])\n",
+    "\n",
+    "point1 = Point((36.22372627258301, 49.9383227101154))\n",
+    "point2 = Point((36.225571632385254, 49.93757694207898))\n",
+    "point3 = Point((36.22698783874512, 49.935809149513695))\n",
+    "point4 = Point((36.230034828186035, 49.93053300797301))\n",
+    "\n",
+    "line1 = LineString([(36.19377136230469, 50.01104862197962), \n",
+    "                    (36.304664611816406, 49.98279931342137)]) \n",
+    "\n",
+    "line2 = LineString([(36.171112060546875, 49.981916255086986), \n",
+    "                    (36.25488281249999, 50.01082798858057)]) \n",
+    "\n",
+    "line3 = LineString([(36.19377136230469, 48.03104862197962), \n",
+    "                    (36.304664611816406, 48.98279931342137)]) \n",
+    "\n",
+    "line4 = LineString([(36.171112060546875, 49.991916255086986), \n",
+    "                    (36.25488281249999, 49.01082798858057)]) "
    ]
   },
   {
@@ -389,6 +406,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_features(): \n",
+    "    polygons = [kharkiv_zoo, kharkiv_park, homilsha, hytor, osnova_lake]\n",
+    "    points = [point1, point2, point3, point4]\n",
+    "    lines = [line1, line2, line3, line4]\n",
+    "\n",
+    "    geometries = [*polygons, *points, *lines]\n",
+    "\n",
+    "    max_features = 10\n",
+    "    features_number = random.randint(1, max_features)\n",
+    "    print(f\"{features_number} features will be in current file\")\n",
+    "\n",
+    "    features = list()\n",
+    "    for _ in range(0, features_number):\n",
+    "        id_ = str(uuid.uuid4())\n",
+    "        acquired = random_date() \n",
+    "        properties = dict(acquired=acquired)\n",
+    "        \n",
+    "        geometry = random.choice(geometries) \n",
+    "        feature = Feature(id=id_, geometry=geometry, properties=properties)\n",
+    "        features.append(feature)\n",
+    "    return features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_item():\n",
+    "    file_date = random_date() \n",
+    "    layer = random.choice([\"Red\", \"Green\", \"Blue\", \"NDVI\"])\n",
+    "    id_ = str(uuid.uuid4())\n",
+    "    \n",
+    "    features = generate_features()\n",
+    "    print(f\"Generated {len(features)} features\")\n",
+    "    if len(features) == 1:\n",
+    "        item = features[0]   \n",
+    "    else:\n",
+    "        item = FeatureCollection(features=features)\n",
+    "        \n",
+    "    return item, f\"/home/{NB_USER}/work/results/{id_}_{layer}_{file_date.split('T')[0]}.geojson.temp\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -397,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -405,8 +472,10 @@
      "output_type": "stream",
      "text": [
       "Generating .geojson file...\n",
-      "Generated temp file: /home/jovyan/work/results/f044f891-5fe4-4955-b885-5f2e58ef0db4_Green_2020-01-19.geojson.temp\n",
-      "Rename temp file: /home/jovyan/work/results/f044f891-5fe4-4955-b885-5f2e58ef0db4_Green_2020-01-19.geojson.temp to /home/jovyan/work/results/f044f891-5fe4-4955-b885-5f2e58ef0db4_Green_2020-01-19.geojson\n",
+      "7 features will be in current file\n",
+      "Generated 7 features\n",
+      "Generated temp file: /home/jovyan/work/results/3d80aae3-354e-4481-81c9-1a9b7f754b05_NDVI_2020-04-06.geojson.temp\n",
+      "Rename temp file: /home/jovyan/work/results/3d80aae3-354e-4481-81c9-1a9b7f754b05_NDVI_2020-04-06.geojson.temp to /home/jovyan/work/results/3d80aae3-354e-4481-81c9-1a9b7f754b05_NDVI_2020-04-06.geojson\n",
       "Execution finished\n"
      ]
     }
