13647_13649: add random generation of metadata

--- a/data/notebooks/geojson.ipynb
+++ b/data/notebooks/geojson.ipynb
@@ -389,25 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_item():\n",
-    "    acquired = random_date() \n",
-    "    layer = random.choice([\"Red\", \"Green\", \"Blue\", \"NDVI\"])\n",
-    "    properties = dict(acquired=acquired, layer=layer)\n",
-    "    \n",
-    "    id_ = str(uuid.uuid4())\n",
-    "    geometry = random.choice([kharkiv_zoo, kharkiv_park, homilsha, hytor, osnova_lake]) \n",
-    "    item = Feature(id=id_, geometry=geometry, properties=properties)\n",
-    "    \n",
-    "    return item, f\"/home/{NB_USER}/work/results/{id_}_{layer}_{acquired.split('T')[0]}.geojson.temp\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,6 +399,7 @@
     "    lines = [line1, line2, line3, line4]\n",
     "\n",
     "    geometries = [*polygons, *points, *lines]\n",
+    "    \n",
     "\n",
     "    max_features = 10\n",
     "    features_number = random.randint(1, max_features)\n",
@@ -424,35 +407,45 @@
     "\n",
     "    features = list()\n",
     "    for _ in range(0, features_number):\n",
-    "        id_ = str(uuid.uuid4())\n",
-    "        acquired = random_date() \n",
-    "        properties = dict(acquired=acquired)\n",
     "        \n",
+    "        # id_ = str(uuid.uuid4())        \n",
     "        geometry = random.choice(geometries) \n",
-    "        feature = Feature(id=id_, geometry=geometry, properties=properties)\n",
+    "        \n",
+    "        feature = Feature(geometry=geometry)\n",
     "        features.append(feature)\n",
     "    return features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_item():\n",
     "    file_date = random_date() \n",
-    "    layer = random.choice([\"Red\", \"Green\", \"Blue\", \"NDVI\"])\n",
     "    id_ = str(uuid.uuid4())\n",
+    "    name = random.choice([\"Red\", \"Green\", \"Blue\", \"NDVI\", \"NDWI\", \"PSRI\", ])\n",
     "    \n",
     "    features = generate_features()\n",
     "    print(f\"Generated {len(features)} features\")\n",
+    "    \n",
     "    if len(features) == 1:\n",
-    "        item = features[0]   \n",
+    "        item = features[0]\n",
     "    else:\n",
     "        item = FeatureCollection(features=features)\n",
-    "        \n",
-    "    return item, f\"/home/{NB_USER}/work/results/{id_}_{layer}_{file_date.split('T')[0]}.geojson.temp\""
+    "    \n",
+    "    item['id'] = id_\n",
+    "    if random.choice([True, False]):\n",
+    "        item['name'] = name\n",
+    "        print(f\"Randomly selected to add name {name}\")\n",
+    "    if random.choice([True, False]):             \n",
+    "        start_date = random_date()\n",
+    "        end_date = random_date(start_date)\n",
+    "        item['start_date'] = start_date\n",
+    "        item['end_date'] = end_date\n",
+    "        print(f\"Randomly selected to add start_date: {start_date} and end_date: {end_date}\")   \n",
+    "    return item, f\"/home/{NB_USER}/work/results/{id_}_{name}_{file_date.split('T')[0]}.geojson.temp\""
    ]
   },
   {
@@ -464,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -472,10 +465,12 @@
      "output_type": "stream",
      "text": [
       "Generating .geojson file...\n",
-      "7 features will be in current file\n",
-      "Generated 7 features\n",
-      "Generated temp file: /home/jovyan/work/results/3d80aae3-354e-4481-81c9-1a9b7f754b05_NDVI_2020-04-06.geojson.temp\n",
-      "Rename temp file: /home/jovyan/work/results/3d80aae3-354e-4481-81c9-1a9b7f754b05_NDVI_2020-04-06.geojson.temp to /home/jovyan/work/results/3d80aae3-354e-4481-81c9-1a9b7f754b05_NDVI_2020-04-06.geojson\n",
+      "1 features will be in current file\n",
+      "Generated 1 features\n",
+      "Randomly selected to add name Blue\n",
+      "Randomly selected to add start_date: 2020-05-23T02:19:42 and end_date: 2020-10-06T05:18:14\n",
+      "Generated temp file: /home/jovyan/work/results/c1047236-dd7d-4b74-baf5-e1ad663d03da_Blue_2020-10-31.geojson.temp\n",
+      "Rename temp file: /home/jovyan/work/results/c1047236-dd7d-4b74-baf5-e1ad663d03da_Blue_2020-10-31.geojson.temp to /home/jovyan/work/results/c1047236-dd7d-4b74-baf5-e1ad663d03da_Blue_2020-10-31.geojson\n",
       "Execution finished\n"
      ]
     }
