--- a/data/notebooks/geotiff.ipynb
+++ b/data/notebooks/geotiff.ipynb
@@ -21,12 +21,14 @@
     "import tempfile\n",
     "import random\n",
     "import requests\n",
+    "import time\n",
     "\n",
     "from rasterio.windows import Window\n",
     "from rasterio import Affine\n",
     "from shapely.geometry import Polygon\n",
     "from shapely.ops import transform\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "from datetime import datetime"
    ]
   },
   {
@@ -144,7 +146,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def crop(input_path, output_path, polygon):\n",
+    "def _str_time_prop(start, end, format, prop):\n",
+    "    \"\"\"Get a time at a proportion of a range of two formatted times.\n",
+    "\n",
+    "    start and end should be strings specifying times formated in the\n",
+    "    given format (strftime-style), giving an interval [start, end].\n",
+    "    prop specifies how a proportion of the interval to be taken after\n",
+    "    start.  The returned time will be in the specified format.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    stime = time.mktime(time.strptime(start, format))\n",
+    "    etime = time.mktime(time.strptime(end, format))\n",
+    "\n",
+    "    ptime = stime + prop * (etime - stime)\n",
+    "\n",
+    "    return time.strftime(format, time.localtime(ptime))\n",
+    "\n",
+    "\n",
+    "def random_date(start=\"2020-01-01T00:00:00\", end=datetime.today().strftime('%Y-%m-%dT%H:%M:%S')):\n",
+    "    return _str_time_prop(start, end, '%Y-%m-%dT%H:%M:%S', random.random())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crop(input_path, output_path, polygon, name):\n",
     "    with rasterio.open(input_path) as src:\n",
     "        x_min, y_min, x_max, y_max = polygon.bounds\n",
     "        \n",
@@ -171,12 +200,20 @@
     "        })\n",
     "\n",
     "        with rasterio.open(output_path, 'w', **kwargs) as dst:\n",
+    "            if random.choice([True, False]):\n",
+    "                print(f\"Randomly selected to add name {name}\")\n",
+    "                dst.update_tags(name=name)\n",
+    "            if random.choice([True, False]):             \n",
+    "                start_date = random_date()\n",
+    "                end_date = random_date(start_date)\n",
+    "                print(f\"Randomly selected to add start_date: {start_date} and end_date: {end_date}\")   \n",
+    "                dst.update_tags(start_date=start_date, end_date=end_date)\n",
     "            dst.write(raster)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +282,8 @@
     "    aoi = to_crs(Polygon(aoi), target_crs)\n",
     "\n",
     "    temp_output_path = f\"/home/{NB_USER}/work/results/{stem}_{location_name}.tif.temp\"\n",
-    "    crop(tif_path, temp_output_path, aoi)\n",
+    "    \n",
+    "    crop(tif_path, temp_output_path, aoi, location_name)\n",
     "    \n",
     "    print(f\"Generated temp file: {temp_output_path}\")\n",
     "    output_path = temp_output_path[:-5]\n",
@@ -255,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -283,9 +321,10 @@
      "output_type": "stream",
      "text": [
       "Tile /home/jovyan/work/sentinel/T36UYA_20200705T083559_TCI.jp2 already exists! Using it...\n",
-      "Сreated temporary directory for calculations: /home/jovyan/work/sentinel/tmpotxcp0w3\n",
-      "Generated temp file: /home/jovyan/work/results/T36UYA_20200705T083559_TCI_forest.tif.temp\n",
-      "Rename temp file: /home/jovyan/work/results/T36UYA_20200705T083559_TCI_forest.tif.temp to /home/jovyan/work/results/T36UYA_20200705T083559_TCI_forest.tif\n",
+      "Сreated temporary directory for calculations: /home/jovyan/work/sentinel/tmpdpu1oxld\n",
+      "Randomly selected to add name tetleha\n",
+      "Generated temp file: /home/jovyan/work/results/T36UYA_20200705T083559_TCI_tetleha.tif.temp\n",
+      "Rename temp file: /home/jovyan/work/results/T36UYA_20200705T083559_TCI_tetleha.tif.temp to /home/jovyan/work/results/T36UYA_20200705T083559_TCI_tetleha.tif\n",
       "Execution finished\n"
      ]
     }
@@ -303,6 +342,13 @@
     "\n",
     "print(\"Execution finished\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
