13749 cleanup old sattelite cache periodically (#19)
* 13749 add command for cleaning old files

* fix docker-compose.yml

* remove trash from notebooks/example

* 13749: remove port mapping, add new sentinel folder to gitignore

* 13749: update settings to new paths

Co-authored-by: adolgarev <a.dolgarev@quantumobile.com>

--- a/data/notebooks/example/geotiff.ipynb
+++ b/data/notebooks/example/geotiff.ipynb
@@ -225,6 +225,7 @@
     "        kwargs = src.meta.copy()\n",
     "        kwargs.update({'driver': format})\n",
     "        \n",
+    "        \n",
     "        with rasterio.open(output_path, 'w', **kwargs) as dst:\n",
     "            dst.write(raster)\n",
     "        return crs"
@@ -297,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_ = f\"/home/{NB_USER}/work/sentinel\"\n",
+    "dir_ = f\"/home/{NB_USER}/work/satellite_imagery\"\n",
     "\n",
     "TILE_URL = \"https://storage.googleapis.com/gcp-public-data-sentinel-2/tiles/36/U/YA/\" \\\n",
     "           \"S2B_MSIL1C_20200705T083559_N0209_R064_T36UYA_20200705T114142.SAFE/GRANULE/\" \\\n",
@@ -313,22 +314,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tile /home/jovyan/work/sentinel/T36UYA_20200705T083559_TCI.jp2 already exists! Using it...\n",
-      "Сreated temporary directory for calculations: /home/jovyan/work/sentinel/tmpdpu1oxld\n",
-      "Randomly selected to add name tetleha\n",
-      "Generated temp file: /home/jovyan/work/results/T36UYA_20200705T083559_TCI_tetleha.tif.temp\n",
-      "Rename temp file: /home/jovyan/work/results/T36UYA_20200705T083559_TCI_tetleha.tif.temp to /home/jovyan/work/results/T36UYA_20200705T083559_TCI_tetleha.tif\n",
-      "Execution finished\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tile_path = load_tile(dir_, TILE_URL)\n",
     "with tempfile.TemporaryDirectory(dir=dir_) as tmpdirname:\n",
@@ -342,20 +330,6 @@
     "\n",
     "print(\"Execution finished\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
