13808: Style GeoJSON layers

--- a/data/notebooks/example/geojson.ipynb
+++ b/data/notebooks/example/geojson.ipynb
@@ -9,12 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
+    "import os.path\n",
     "import geojson\n",
     "import random\n",
     "import time\n",
@@ -26,18 +27,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3.7.8 | packaged by conda-forge | (default, Jul 31 2020, 02:25:08) \\n[GCC 7.5.0]'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sys.version"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jovyan\n"
+     ]
+    }
+   ],
    "source": [
     "NB_USER = os.getenv('NB_USER')\n",
     "print(NB_USER)"
@@ -45,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,14 +412,15 @@
     "        # id_ = str(uuid.uuid4())        \n",
     "        geometry = random.choice(geometries) \n",
     "        \n",
-    "        feature = Feature(geometry=geometry)\n",
+    "        style = dict(color=\"green\")\n",
+    "        feature = Feature(geometry=geometry, properties=dict(style=style))\n",
     "        features.append(feature)\n",
     "    return features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +447,7 @@
     "        item['start_date'] = start_date\n",
     "        item['end_date'] = end_date\n",
     "        print(f\"Randomly selected to add start_date: {start_date} and end_date: {end_date}\")   \n",
-    "    return item, f\"/home/{NB_USER}/work/results/{id_}_{name}_{file_date.split('T')[0]}.geojson.temp\""
+    "    return item, f\"/home/{NB_USER}/work/results/example/{id_}_{name}_{file_date.split('T')[0]}.geojson.temp\""
    ]
   },
   {
@@ -438,13 +459,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating .geojson file...\n",
+      "10 features will be in current file\n",
+      "Generated 10 features\n",
+      "Randomly selected to add start_date: 2020-11-16T08:40:45 and end_date: 2020-11-19T16:15:49\n",
+      "Generated temp file: /home/jovyan/work/results/example/328fdd74-19a4-493d-a184-220d385306b6_PSRI_2020-09-06.geojson.temp\n",
+      "Rename temp file: /home/jovyan/work/results/example/328fdd74-19a4-493d-a184-220d385306b6_PSRI_2020-09-06.geojson.temp to /home/jovyan/work/results/example/328fdd74-19a4-493d-a184-220d385306b6_PSRI_2020-09-06.geojson\n",
+      "Execution finished\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Generating .geojson file...\")\n",
     "\n",
     "item, temp_path = generate_item()\n",
+    "os.makedirs(os.path.dirname(temp_path), exist_ok=True)\n",
     "\n",
     "with open(temp_path, 'w') as file:\n",
     "    geojson.dump(item, file)\n",
@@ -453,7 +489,7 @@
     "output_path = temp_path[:-5]\n",
     "print(f\"Rename temp file: {temp_path} to {output_path}\")\n",
     "os.rename(temp_path, output_path)\n",
-    "    \n",
+    "\n",
     "print(\"Execution finished\")"
    ]
   }
