--- a/data/notebooks/example/geotiff.ipynb
+++ b/data/notebooks/example/geotiff.ipynb
@@ -14,6 +14,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import os.path\n",
     "import sys\n",
     "import rasterio\n",
     "import pyproj\n",
@@ -282,7 +283,8 @@
     "    target_crs = convert(tile_path, tif_path)\n",
     "    aoi = to_crs(Polygon(aoi), target_crs)\n",
     "\n",
-    "    temp_output_path = f\"/home/{NB_USER}/work/results/{stem}_{location_name}.tif.temp\"\n",
+    "    temp_output_path = f\"/home/{NB_USER}/work/results/example/{stem}_{location_name}.tif.temp\"\n",
+    "    os.makedirs(os.path.dirname(temp_output_path), exist_ok=True)\n",
     "    \n",
     "    crop(tif_path, temp_output_path, aoi, location_name)\n",
     "    \n",
@@ -314,9 +316,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tile /home/jovyan/work/satellite_imagery/T36UYA_20200705T083559_TCI.jp2 already exists! Using it...\n",
+      "Сreated temporary directory for calculations: /home/jovyan/work/satellite_imagery/tmpwtdnekb0\n",
+      "Randomly selected to add name tetleha\n",
+      "Generated temp file: /home/jovyan/work/results/example/T36UYA_20200705T083559_TCI_tetleha.tif.temp\n",
+      "Rename temp file: /home/jovyan/work/results/example/T36UYA_20200705T083559_TCI_tetleha.tif.temp to /home/jovyan/work/results/example/T36UYA_20200705T083559_TCI_tetleha.tif\n",
+      "Execution finished\n"
+     ]
+    }
+   ],
    "source": [
     "tile_path = load_tile(dir_, TILE_URL)\n",
     "with tempfile.TemporaryDirectory(dir=dir_) as tmpdirname:\n",
