--- a/data/notebooks/example/geotiff.ipynb
+++ b/data/notebooks/example/geotiff.ipynb
@@ -28,7 +28,10 @@
     "from shapely.geometry import Polygon\n",
     "from shapely.ops import transform\n",
     "from pathlib import Path\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "\n",
+    "from sentinel2download.downloader import Sentinel2Downloader\n",
+    "from sentinel2download.overlap import Sentinel2Overlap"
    ]
   },
   {
@@ -39,7 +42,7 @@
     {
      "data": {
       "text/plain": [
-       "'3.7.8 | packaged by conda-forge | (default, Jul 31 2020, 02:25:08) \\n[GCC 7.5.0]'"
+       "'3.7.8 | packaged by conda-forge | (default, Nov 17 2020, 23:45:15) \\n[GCC 7.5.0]'"
       ]
      },
      "execution_count": 2,
@@ -314,9 +317,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading tile: https://storage.googleapis.com/gcp-public-data-sentinel-2/tiles/36/U/YA/S2B_MSIL1C_20200705T083559_N0209_R064_T36UYA_20200705T114142.SAFE/GRANULE/L1C_T36UYA_A017393_20200705T083602/IMG_DATA/T36UYA_20200705T083559_TCI.jp2\n",
+      "Tile loaded and stored: /home/jovyan/work/satellite_imagery/T36UYA_20200705T083559_TCI.jp2\n",
+      "Сreated temporary directory for calculations: /home/jovyan/work/satellite_imagery/tmpkypy3sjh\n",
+      "Randomly selected to add name tetleha\n",
+      "Generated temp file: /home/jovyan/work/results/T36UYA_20200705T083559_TCI_tetleha.tif.temp\n",
+      "Rename temp file: /home/jovyan/work/results/T36UYA_20200705T083559_TCI_tetleha.tif.temp to /home/jovyan/work/results/T36UYA_20200705T083559_TCI_tetleha.tif\n",
+      "Execution finished\n"
+     ]
+    }
+   ],
    "source": [
     "tile_path = load_tile(dir_, TILE_URL)\n",
     "with tempfile.TemporaryDirectory(dir=dir_) as tmpdirname:\n",
@@ -330,6 +347,13 @@
     "\n",
     "print(\"Execution finished\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
