--- a/data/notebooks/example/geojson.ipynb
+++ b/data/notebooks/example/geojson.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,7 @@
     "import random\n",
     "import time\n",
     "import uuid\n",
+    "import copy\n",
     "\n",
     "from geojson import Feature, Polygon, FeatureCollection, Point, LineString\n",
     "from datetime import datetime"
@@ -27,37 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'3.7.8 | packaged by conda-forge | (default, Jul 31 2020, 02:25:08) \\n[GCC 7.5.0]'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sys.version"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "jovyan\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "NB_USER = os.getenv('NB_USER')\n",
     "print(NB_USER)"
@@ -65,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,15 +387,35 @@
     "    max_features = 10\n",
     "    features_number = random.randint(1, max_features)\n",
     "    print(f\"{features_number} features will be in current file\")\n",
+    "    \n",
+    "    data_template = [\n",
+    "        {\n",
+    "            \"x\": [\"2019-04-02\", \"2019-04-07\"],\n",
+    "            \"y\": [950, 3100],\n",
+    "            \"type\": \"bar\"\n",
+    "        }\n",
+    "    ];\n",
+    "    layout = {\n",
+    "        \"title\": \"Cutting area changes\",\n",
+    "        \"yaxis\": {\n",
+    "            \"title\": \"Area, m²\"\n",
+    "        },\n",
+    "        \"xaxis\": {\n",
+    "            \"type\": \"category\",\n",
+    "            \"tickangle\": -45\n",
+    "        }\n",
+    "    };\n",
     "\n",
     "    features = list()\n",
     "    for _ in range(0, features_number):\n",
     "        \n",
     "        # id_ = str(uuid.uuid4())        \n",
-    "        geometry = random.choice(geometries) \n",
+    "        geometry = random.choice(geometries)\n",
     "        \n",
-    "        style = dict(color=\"green\")\n",
-    "        feature = Feature(geometry=geometry, properties=dict(style=style))\n",
+    "        data = copy.deepcopy(data_template)\n",
+    "        data[0][\"y\"] = [random.randint(1, 5000), random.randint(1, 10000)]\n",
+    "        style = dict(color=random.choice([\"red\", \"green\", \"blue\"]))\n",
+    "        feature = Feature(geometry=geometry, properties=dict(style=style, data=data, layout=layout))\n",
     "        features.append(feature)\n",
     "    return features"
    ]
@@ -467,11 +469,11 @@
      "output_type": "stream",
      "text": [
       "Generating .geojson file...\n",
-      "10 features will be in current file\n",
-      "Generated 10 features\n",
-      "Randomly selected to add start_date: 2020-11-16T08:40:45 and end_date: 2020-11-19T16:15:49\n",
-      "Generated temp file: /home/jovyan/work/results/example/328fdd74-19a4-493d-a184-220d385306b6_PSRI_2020-09-06.geojson.temp\n",
-      "Rename temp file: /home/jovyan/work/results/example/328fdd74-19a4-493d-a184-220d385306b6_PSRI_2020-09-06.geojson.temp to /home/jovyan/work/results/example/328fdd74-19a4-493d-a184-220d385306b6_PSRI_2020-09-06.geojson\n",
+      "6 features will be in current file\n",
+      "Generated 6 features\n",
+      "Randomly selected to add start_date: 2020-01-23T18:34:22 and end_date: 2020-05-09T03:30:57\n",
+      "Generated temp file: /home/jovyan/work/results/example/455a8e6c-55a2-41f1-991f-57b1ab772a33_NDVI_2020-01-06.geojson.temp\n",
+      "Rename temp file: /home/jovyan/work/results/example/455a8e6c-55a2-41f1-991f-57b1ab772a33_NDVI_2020-01-06.geojson.temp to /home/jovyan/work/results/example/455a8e6c-55a2-41f1-991f-57b1ab772a33_NDVI_2020-01-06.geojson\n",
       "Execution finished\n"
      ]
     }
