--- a/data/notebooks/sip/TCI_NDVI.ipynb
+++ b/data/notebooks/sip/TCI_NDVI.ipynb
@@ -315,11 +315,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate(layer, temp_dir, bbox, name, properties):\n",
+    "def calculate1(layer, temp_dir, bbox, name, properties):\n",
     "    \"\"\"\n",
     "    Preparing true color Sentinel2 and NDVI images for given AOI\n",
     "    \"\"\"\n",
@@ -344,20 +344,74 @@
     "        # calculate NDVI\n",
     "        target_crs = NDVI(image_paths['NIR'], image_paths['RED'], temp_path)\n",
     "    \n",
-    "    temp_output_path = get_path(path, layer, RESULTS_DIR, name, suffix=\".temp\")\n",
+    "    # print(\"TARGET CRS\")\n",
+    "    # print(target_crs)\n",
+    "    bound_box = to_crs(bbox, target_crs)   \n",
+    "\n",
+    "    \n",
+    "    temp_output_path = get_path(path, layer, temp_dir, name, suffix=\".temp\")\n",
     "    print(f\"Temporary {layer} output path: {temp_output_path}\")\n",
+    "    \n",
+    "    # crop .tif image by aoi\n",
+    "    crop(temp_path, temp_output_path, bound_box, name, date)   \n",
+    "    \n",
+    "    \n",
+    "    output_path = temp_output_path[:-5]\n",
+    "    print(f\"Rename temp file: {temp_output_path} to {output_path}\")\n",
+    "    os.rename(temp_output_path, output_path)\n",
+    "    \n",
+    "    # reproject to same crs\n",
+    "    print(\"REPROJECTING\")\n",
+    "    print(output_path)\n",
+    "    output_path = reproject_tif(output_path)  \n",
+    "    print(output_path)\n",
+    "        \n",
+    "    \n",
+    "    return output_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate(layer, temp_dir, bbox, name, properties):\n",
+    "    \"\"\"\n",
+    "    Preparing true color Sentinel2 and NDVI images for given AOI\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    image_paths = properties['paths']\n",
+    "    date = properties['date']\n",
+    "  \n",
+    "    if layer == 'TCI':       \n",
+    "        # convert .jp2 image to .tif\n",
+    "        path = image_paths['TCI']\n",
+    "        temp_path = get_path(path, layer, temp_dir, name)    \n",
+    "        print(f\"Save {layer} image path: {temp_path}\")\n",
+    "            \n",
+    "        target_crs = convert(path , temp_path) \n",
+    "            \n",
+    "    if layer == 'NDVI':\n",
+    "        path = image_paths['RED']\n",
+    "        temp_path = get_path(path, layer, temp_dir, name)    \n",
+    "        print(f\"Save {layer} image path: {temp_path}\")\n",
+    "            \n",
+    "        # calculate NDVI\n",
+    "        target_crs = NDVI(image_paths['NIR'], image_paths['RED'], temp_path)\n",
     "    \n",
     "    # print(\"TARGET CRS\")\n",
     "    # print(target_crs)\n",
     "    bound_box = to_crs(bbox, target_crs)   \n",
-    "        \n",
-    "    # print(\"BOUND BOX\")\n",
-    "    # print(bound_box)\n",
-    "        \n",
-    "    # crop .tif image by aoi\n",
-    "    crop(temp_path, temp_output_path, bound_box, name, date)    \n",
+    "\n",
     "    \n",
-    "    print(f\"Temp file: {temp_output_path}\")\n",
+    "    temp_output_path = get_path(path, layer, temp_dir, name, suffix=\".temp\")\n",
+    "    print(f\"Temporary {layer} output path: {temp_output_path}\")\n",
+    "    \n",
+    "    # crop .tif image by aoi\n",
+    "    crop(temp_path, temp_output_path, bound_box, name, date)   \n",
+    "    \n",
+    "    \n",
     "    output_path = temp_output_path[:-5]\n",
     "    print(f\"Rename temp file: {temp_output_path} to {output_path}\")\n",
     "    os.rename(temp_output_path, output_path)\n",
@@ -410,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,8 +473,6 @@
     "\n",
     "SIP_DIR = os.path.join(BASE, \"notebooks/sip\")\n",
     "RESULTS_DIR = os.path.join(BASE, SIP_DIR , \"results\")\n",
-    "\n",
-    "COLORMAP_MAGMA = os.path.join(BASE, SIP_DIR, \"magma.npy\") \n",
     "COLORMAP_BRBG = os.path.join(BASE, SIP_DIR, \"brbg.npy\") \n",
     "\n",
     "COLORS = np.load(COLORMAP_BRBG)\n",
@@ -429,7 +481,7 @@
     "BANDS = {'TCI', 'B04', 'B08', }\n",
     "CONSTRAINTS = {'NODATA_PIXEL_PERCENTAGE': 10.0, 'CLOUDY_PIXEL_PERCENTAGE': 5.0, }\n",
     "\n",
-    "LAYERS = ['NDVI', 'TCI']"
+    "LAYERS = ['TCI']"
    ]
   },
   {
@@ -530,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -538,30 +590,19 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Calculating NDVI:\n",
-      "\n",
-      "\n",
-      "Execution for tile 36UYA\n",
-      "Сreated temporary directory for calculations: /home/jovyan/work/notebooks/sip/tmp6wm9gtwq\n",
-      "Calculating TCI and NDVI for given AOI...\n",
-      "Save NDVI image path: /home/jovyan/work/notebooks/sip/tmp6wm9gtwq/Pechenihy_T36UYA_20200923T083659_NDVI_10m.tif\n",
-      "Calculating NDVI...\n",
-      "NDVI calculation finished\n",
-      "Temporary NDVI output path: /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_NDVI_10m.tif.temp\n",
-      "Temp file: /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_NDVI_10m.tif.temp\n",
-      "Rename temp file: /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_NDVI_10m.tif.temp to /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_NDVI_10m.tif\n",
-      "Execution for tile 36UYA finished\n",
-      "\n",
       "Calculating TCI:\n",
       "\n",
       "\n",
       "Execution for tile 36UYA\n",
-      "Сreated temporary directory for calculations: /home/jovyan/work/notebooks/sip/tmpddibx04d\n",
+      "Сreated temporary directory for calculations: /home/jovyan/work/notebooks/sip/tmpndes_i__\n",
       "Calculating TCI and NDVI for given AOI...\n",
-      "Save TCI image path: /home/jovyan/work/notebooks/sip/tmpddibx04d/Pechenihy_T36UYA_20200923T083659_TCI_10m.tif\n",
+      "Save TCI image path: /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_TCI_10m.tif\n",
       "Temporary TCI output path: /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_TCI_10m.tif.temp\n",
       "Temp file: /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_TCI_10m.tif.temp\n",
       "Rename temp file: /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_TCI_10m.tif.temp to /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_TCI_10m.tif\n",
+      "REPROJECTING\n",
+      "/home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_TCI_10m.tif\n",
+      "/home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_TCI_10m_epsg_3857.tif\n",
       "Execution for tile 36UYA finished\n"
      ]
     }
@@ -577,7 +618,7 @@
     "        with tempfile.TemporaryDirectory(dir=SIP_DIR) as tmpdirname:\n",
     "            print(f\"Сreated temporary directory for calculations: {tmpdirname}\")   \n",
     "    \n",
-    "            save_path = calculate(layer, tmpdirname, bbox, NAME, properties)\n",
+    "            save_path = calculate1(layer, RESULTS_DIR, bbox, NAME, properties)\n",
     "            paths.append(save_path)\n",
     "    layer_paths[layer] = paths\n",
     "    print(f\"Execution for tile {tile} finished\")"
@@ -585,10 +626,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'TCI': ['/home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_TCI_10m_epsg_3857.tif']}"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "layer_paths"
+   ]
   },
   {
    "cell_type": "code",
@@ -634,11 +688,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reproject_tif(input_path, dst_crs='EPSG:3857'):\n",
+    "def reproject_image(input_path, dst_crs='EPSG:3857'):\n",
     "    with rasterio.open(input_path) as src:\n",
     "        transform, width, height = calculate_default_transform(\n",
     "            src.crs, dst_crs, src.width, src.height, *src.bounds)\n",
